--- a/lang.html
+++ b/lang.html
@@ -48,6 +48,7 @@
         <option value="zh-CN">Chinese (Simplified)</option>
         <option value="hi">Hindi</option>
         <option value="ta">Tamil</option>
+        <option value="en">English</option>
         <!-- Add more languages as needed -->
     </select>
     
